12.06.2025 Update - refactor kodu